add search functianality

--- a/index.html
+++ b/index.html
@@ -56,12 +56,7 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="my-3">Popular movies</h3>
-        </div>
-      </div>
-      <div class="row" id="popular-movies"></div>
+      <div class="row py-5" id="content"></div>
     </div>
 
     <!-- JavaScript -->
