--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row" id="overview"></div>
+      <div id="overview"></div>
       <div class="row py-5" id="content"></div>
     </div>
 
